[project]
name = "fbi-core"
version = "1.3.2"
description = "File Based Index (FBI) core queries. This module provides functions to interact with the CEDA FBI including read queries and methods to write records. Command line tools to list and summarise the archive are included here. A separate package, fbi-indexing-tools, provides tools to write records to the FBI. Documentation: https://cedadev.github.io/fbi-core/index.html"
authors = [
    {name = "Sam Pepler <sam.pepler@stfc.ac.uk> Matthew Paice <matthew.paice@stfc.ac.uk>"}
]
readme = "README.md"
dynamic = ["dependencies"]
requires-python = ">=3.11"

[tool.poetry]
requires-poetry = ">=2.0"

packages = [
    { include = "fbi_core"},
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "click (>=8.2.1,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "elasticsearch (==8.12.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
